--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/icons": "1.0.0-beta.42",
+    "@material-ui/core": "^1.1.0",
+    "@material-ui/icons": "^1.1.0",
+    "accounting": "^0.4.1",
+    "big-js": "^3.1.3",
     "chartist": "0.10.1",
     "classnames": "2.2.5",
     "history": "^4.7.2",
-    "material-ui": "1.0.0-beta.41",
     "npm-run-all": "4.1.2",
     "perfect-scrollbar": "1.3.0",
     "react": "16.4.0",
@@ -15,7 +17,8 @@
     "react-dom": "16.4.0",
     "react-google-maps": "9.4.5",
     "react-router-dom": "4.2.2",
-    "react-swipeable-views": "0.12.12"
+    "react-swipeable-views": "0.12.12",
+    "recompose": "^0.27.1"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.3",
