--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
     "chartist": "0.10.1",
     "classnames": "2.2.5",
     "history": "^4.7.2",
+    "mobx": "^4.3.0",
+    "mobx-react": "^5.1.2",
+    "mobx-react-router": "^4.0.4",
     "npm-run-all": "4.1.2",
     "perfect-scrollbar": "1.3.0",
     "react": "16.4.0",
+    "react-app-rewire-mobx": "^1.0.8",
     "react-chartist": "0.13.1",
     "react-dom": "16.4.0",
     "react-google-maps": "9.4.5",
@@ -32,13 +36,15 @@
     "eslint-plugin-react": "^7.8.2",
     "husky": "^0.14.3",
     "lint-staged": "^7.1.2",
+    "mobx-react-devtools": "^5.0.1",
     "prettier": "^1.13.2",
+    "react-app-rewired": "^1.5.2",
     "react-scripts": "1.1.4"
   },
   "scripts": {
-    "start": "NODE_PATH=./src react-scripts start",
-    "build": "NODE_PATH=./src react-scripts build",
-    "test": "NODE_PATH=./src react-scripts test --env=jsdom",
+    "start": "NODE_PATH=./src react-app-rewired start",
+    "build": "NODE_PATH=./src react-app-rewired build",
+    "test": "NODE_PATH=./src react-app-rewired test --env=jsdom",
     "eject": "react-scripts eject",
     "precommit": "lint-staged"
   },
