--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "mobx": "^4.3.0",
     "mobx-react": "^5.1.2",
     "mobx-react-router": "^4.0.4",
+    "node-fetch": "^2.1.2",
     "npm-run-all": "4.1.2",
     "perfect-scrollbar": "1.3.0",
     "react": "16.4.0",
