--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "big-js": "^3.1.3",
     "chartist": "0.10.1",
     "classnames": "2.2.5",
+    "computed-async-mobx": "^4.1.0",
     "history": "^4.7.2",
-    "mobx": "^4.3.0",
+    "mobx": "^5.0.0",
     "mobx-react": "^5.1.2",
     "mobx-react-router": "^4.0.4",
+    "mobx-utils": "^5.0.0",
     "node-fetch": "^2.1.2",
     "npm-run-all": "4.1.2",
     "perfect-scrollbar": "1.3.0",
