--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   "dependencies": {
     "@material-ui/core": "^1.4.3",
     "@material-ui/icons": "^2.0.3",
+    "big-js": "^3.1.3",
     "cors": "^2.8.4",
     "express": "^4.16.3",
+    "javascript-time-ago": "^1.0.31",
     "mobx": "^5.0.3",
     "mobx-react": "^5.2.3",
     "mobx-task": "^1.0.0-alpha.0",
