--- a/package.json
+++ b/package.json
@@ -7,27 +7,28 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "@material-ui/core": "^1.4.3",
-    "@material-ui/icons": "^2.0.3",
+    "@material-ui/core": "^3.9.0",
+    "@material-ui/icons": "^3.0.2",
     "big-js": "^3.1.3",
     "cors": "^2.8.4",
     "express": "^4.16.3",
     "javascript-time-ago": "^1.0.31",
     "mobx": "^5.0.3",
     "mobx-react": "^5.2.3",
-    "mobx-task": "^1.0.0-alpha.0",
+    "mobx-task": "^1.0.0",
     "node-fetch": "^2.2.0",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
+    "react-jss": "^8.6.1",
     "react-router-dom": "^4.3.1",
     "url-loader": "^1.0.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0-beta.56",
-    "@babel/plugin-proposal-class-properties": "^7.0.0-rc.1",
-    "@babel/polyfill": "^7.0.0-beta.56",
-    "@babel/preset-env": "^7.0.0-beta.56",
-    "@babel/preset-react": "^7.0.0-beta.56",
+    "@babel/core": "^7.2.2",
+    "@babel/plugin-proposal-class-properties": "^7.3.0",
+    "@babel/polyfill": "^7.2.5",
+    "@babel/preset-env": "^7.3.1",
+    "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.0-beta.4",
     "file-loader": "^1.1.11",
     "webpack": "^4.16.5",
